--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,35 @@
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1 class="text-3xl font-bold font-gemunu text-gega-red">
-      Hello world!
-    </h>
-  </div>
+   <header class="bg-black py-12 text-gega-grey font-gemunu uppercase">
+        <div class="container flex items-center justify-between space-x-16">
+           <a href="#" class="pl-4 md:pl-0 text-4xl lg:text-6xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-gega-red to-gega-grey">GEGA</a>
+           <nav class="flex justify-between flex-1">
+              <div class="flex items-center text-lg space-x-8">
+                   <a href="#" class="hover:text-gega-melon transition duration-300">MOVIES</a>
+                   <a href="#" class="hover:text-gega-melon transition duration-300">CELEBRETIES</a>
+                   <a href="#" class="hover:text-gega-melon transition duration-300">BLOG</a>
+                   <a href="#" class="hover:text-gega-melon transition duration-300">NEWS</a>
+                   <a href="#" class="hover:text-gega-melon transition duration-300">ABOUT</a>
+              </div>
+              <div class="flex items-center space-x-8">
+                   <form>
+                      <div class="group border-r px-4 py-1 border-gega-red">
+                          <input type="text" class="opacity-0 group-hover:opacity-100 bg-transparent border-b border-gega-red focus:outline-none w-44 transition duration-200">
+                          <button class="group-hover:ml-0 transition duration-300"><i class="fas fa-search group-hover:text-gega-red transition duration-300"></i></button>
+                        </div>
+                   </form>
+                   <div class="flex items-center space-x-8 text-lg">
+                        <a href="#">Login</a>
+                        <a href="#" class="bg-gega-red px-3  py-1 hover:bg-rose-600 hover:text-gega-grey cursor-pointer">SIGN UP</a>
+                   </div>
+              </div>
+           </nav>
+        </div>
+   </header>
 </body>
 </html>
