--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  
+  <!-- Header section -->
+
    <header class="bg-black py-6 lg:py-12 text-gega-grey  uppercase">
         <div class="container flex items-center justify-between space-x-8 lg:space-x-16">
            <a href="#" class="pl-4 md:pl-0 text-4xl lg:text-6xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-gega-red to-gega-grey">GEGA</a>
@@ -48,5 +51,48 @@
            </nav>
         </div>
    </header>
+
+   <!-- Main section area -->
+
+   <section class="h-64 md:h-96 lg:h-128 group relative">
+        <img src="./images/batman.jpg" alt="main image" class="w-full h-full object-cover">
+
+        <div class="absolute bottom-0 w-full bg-gradient-to-b from-transparent to-black">
+           <div class="container pl-10 lg:pl-0">
+              <h3 class="text-gega-melon tracking-wider group-hover:mb-1 duration-300">
+                 Action,Drama,Thriller
+              </h3>
+              <h1 class="text-4xl lg:text-6xl text-gega-grey group-hover:mb-1 duration-300">
+                  The Dark Knight
+              </h1>
+              <p class="text-gega-grey group-hover:mb-2 duration-300 text-sm lg:text-base w-3/4 lg:w-2/3">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim asperiores ducimus alias provident dignissimos velit repudiandae, doloribus maxime dolor harum!
+              </p>
+
+              <div class="flex space-x-8 opacity-0 group-hover:opacity-100 group-hover:mb-10 lg:group-hover:mb-20 duration-1000">
+                    <div class="flex space-x-2 items-center cursor-pointer"> 
+                         <a href="#" class="text-gega-grey uppercase lg:text-lg hover:text-gega-red">Watch Trailer</a>
+                          <div class="flex h-8 w-8 text-center rounded-full items-center justify-center bg-gega-red">
+                             <i class="fas fa-play"></i>
+                          </div>
+                    </div>
+
+                    <div class="flex space-x-2 items-center cursor-pointer"> 
+                         <a href="#" class="text-gega-grey uppercase lg:text-lg hover:text-gega-red">FULLSYNOPSIS</a>
+                          <div class="flex h-8 w-8 text-center rounded-full items-center justify-center bg-gega-red">
+                             <i class="fas fa-arrow-right"></i>
+                          </div>
+                    </div>
+              </div>
+           </div>
+        </div>
+
+        <div class="flex space-x-3 absolute bottom-5 left-10 opacity-0 group-hover:opacity-100">
+             <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-red"></div>
+             <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-grey"></div>
+             <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-grey"></div>
+             <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-gega-grey"></div>
+        </div>
+   </section>
 </body>
 </html>
