--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class='open'>
   
   <!-- Header section -->
 
@@ -54,7 +54,7 @@
 
    <!-- Main section area -->
 
-   <section class="h-64 md:h-96 lg:h-128 group relative">
+   <section class="h-96 lg:h-128 group relative">
         <img src="./images/batman.jpg" alt="main image" class="w-full h-full object-cover">
 
         <div class="absolute bottom-0 w-full bg-gradient-to-b from-transparent to-black">
@@ -96,9 +96,9 @@
    </section>
 
    <section class="py-24 bg-black">
-       <div class="container flex space-x-16">
+       <div class="container flex flex-col lg:flex-row lg:space-x-16 space-y-8 lg:space-y-0">
           <div class="basis-2/3 ">
-               <div class="flex space-x-2 divide-x divide-gega-red divide-opacity-50 mb-8">
+               <div class="flex space-x-2 divide-x divide-gega-red divide-opacity-50 mb-8 pl-10 lg:pl-0">
                      <h2 class="text-gega-red"><a href="#">Latest</a></h2>
                      <h2 class="text-gega-grey pl-2 hover:text-gega-red duration-300"><a href="#">Popular</a></h2 class="text-gega-grey pl-2 hover:text-gega-red duration-300">
                      <h2 class="text-gega-grey pl-2 hover:text-gega-red duration-300"><a href="#">Best</a></h2 class="text-gega">
@@ -106,7 +106,7 @@
                <div class="flex flex-wrap">
                     
 
-                    <div class="group relative overflow-hidden basis-1/3">
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
                          <img src="./images/mv1.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
                               <div class="absolute px-6 bottom-8">
                                  <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
@@ -118,7 +118,7 @@
                               </div>
                     </div>
 
-                    <div class="group relative overflow-hidden basis-1/3">
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
                          <img src="./images/mv2.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
                               <div class="absolute px-6 bottom-8">
                                  <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
@@ -130,7 +130,7 @@
                               </div>
                     </div>
 
-                    <div class="group relative overflow-hidden basis-1/3">
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
                          <img src="./images/mv3.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
                               <div class="absolute px-6 bottom-8">
                                  <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
@@ -142,7 +142,7 @@
                               </div>
                     </div>
 
-                    <div class="group relative overflow-hidden basis-1/3">
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
                          <img src="./images/mv4.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
                               <div class="absolute px-6 bottom-8">
                                  <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
@@ -154,7 +154,7 @@
                               </div>
                     </div>
 
-                    <div class="group relative overflow-hidden basis-1/3">
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
                          <img src="./images/mv5.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
                               <div class="absolute px-6 bottom-8">
                                  <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
@@ -166,7 +166,7 @@
                               </div>
                     </div>
 
-                    <div class="group relative overflow-hidden basis-1/3">
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
                          <img src="./images/mv6.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
                               <div class="absolute px-6 bottom-8">
                                  <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
@@ -178,14 +178,39 @@
                               </div>
                     </div>
 
-                    
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3 hidden md:block lg:hidden">
+                         <img src="./images/mv6.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+                              <div class="absolute px-6 bottom-8">
+                                 <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
+                                 <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 text-gega-grey duration-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, molestiae?</p>
+                                 <div class="absolute flex space-x-8 text-gega-grey opacity-0 -bottom-2 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                                      <a class="hover:text-gega-red duration-300" href="#"><i class="fa-solid fa-play"></i></a class="hover:text-gega-red duration-300">
+                                      <a class="hover:text-gega-red duration-300" href="#"><i class="fa-solid fa-arrow-right"></i></a class="hover:text-gega-red duration-300">
+                                 </div>
+                              </div>
+                    </div>
+
+
+                    <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3 hidden md:block lg:hidden">
+                         <img src="./images/mv6.jpg" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+                              <div class="absolute px-6 bottom-8">
+                                 <h3 class="text-gega-grey group-hover:text-gega-melon group-hover:mb-2 duration-500">Oblivion</h3>
+                                 <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 text-gega-grey duration-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, molestiae?</p>
+                                 <div class="absolute flex space-x-8 text-gega-grey opacity-0 -bottom-2 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                                      <a class="hover:text-gega-red duration-300" href="#"><i class="fa-solid fa-play"></i></a class="hover:text-gega-red duration-300">
+                                      <a class="hover:text-gega-red duration-300" href="#"><i class="fa-solid fa-arrow-right"></i></a class="hover:text-gega-red duration-300">
+                                 </div>
+                              </div>
+                    </div>
+
+
                </div>
           </div>
 
-          <div class="basis-1/3 ">
+          <div class="basis-1/3 pl-10 lg:pl-0">
                <h2 class="text-gega-grey mb-8">HOT NEWS</h2>
-               <div class="flex flex-col h-full justify-between pb-16">
-                   <div class="flex items-center group">
+               <div class="flex flex-row lg:flex-col lg:h-full justify-start lg:justify-between lg:pb-16 flex-wrap lg:flex-nowrap space-y-4">
+                   <div class="flex items-center group basis-3/4 md:basis-1/2">
                       <div class="basis-1/3 h-full">
                           <img src="./images/new1.jpg" class="h-full w-full object-cover">
                       </div>
@@ -194,7 +219,7 @@
                          <p class="text-xs tracking-tighter mt-2 font-bold font-gemenu">on now 01 2023</p>
                       </div>
                    </div>
-                   <div class="flex items-center group">
+                   <div class="flex items-center group basis-3/4 md:basis-1/2">
                     <div class="basis-1/3 h-full">
                         <img src="./images/new2.jpg" class="h-full w-full object-cover">
                     </div>
@@ -203,7 +228,7 @@
                        <p class="text-xs tracking-tighter mt-2 font-bold font-gemenu">on now 01 2023</p>
                     </div>
                  </div>
-                 <div class="flex items-center group">
+                 <div class="flex items-center group basis-3/4 md:basis-1/2">
                     <div class="basis-1/3 h-full">
                         <img src="./images/new3.jpg" class="h-full w-full object-cover">
                     </div>
@@ -212,7 +237,7 @@
                        <p class="text-xs tracking-tighter mt-2 font-bold font-gemenu">on now 01 2023</p>
                     </div>
                  </div>
-                 <div class="flex items-center group">
+                 <div class="flex items-center group basis-3/4 md:basis-1/2">
                     <div class="basis-1/3 h-full">
                         <img src="./images/new4.jpg" class="h-full w-full object-cover">
                     </div>
@@ -221,7 +246,7 @@
                        <p class="text-xs tracking-tighter mt-2 font-bold font-gemenu">on now 01 2023</p>
                     </div>
                  </div>
-                 <div class="flex items-center group">
+                 <div class="flex items-center group basis-3/4 md:basis-1/2 md:hidden lg:flex">
                     <div class="basis-1/3 h-full">
                         <img src="./images/new5.jpg" class="h-full w-full object-cover">
                     </div>
@@ -234,6 +259,32 @@
                </div>
           </div>
        </div>
+   </section>
+
+   <!-- Matrix section -->
+
+   <section class="bg-gega-white">
+     <div class=" container flex items-center justify-center relative pl-10 lg:pl-0">
+          <div class="md:basis-1/3 lg:basis-1/2 hidden md:block">
+              <img src="./images/matrix.png" class="lg:absolute lg:bottom-0">
+          </div>
+          <div class="md:basis-2/3 lg:basis-1/2">
+              <div class="flex flex-col justify-center py-10 w-3/4 md:w-full">
+                 <h3 class="tracking-wider text-gega-melon">
+                    ACTION,DRAMA,THRILLER
+                 </h3>
+                 <h2 class="mb-2">Matrix Reloaded</h2>
+                 <p class="text-sm mb-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi dolores nulla quae dolore modi velit natus vel debitis, suscipit expedita.</p>
+                  <h3 class="tracking-wider text-gega-red">
+                    8 wins 34 nominations
+                 </h3>
+               </div>
+          </div>
+
+          <div class="left-10 absolute -top-12 lg:left-0 w-24 h-24 bg-gega-melon rounded-full text-center flex items-center">
+              <p class="font-gemunu lg:uppercase font-bold text-xl text-gega-red -rotate-45">OLDIE & GOLDIE</p>
+          </div>
+     </div>
    </section>
 </body>
 </html>
