--- a/public/index.html
+++ b/public/index.html
@@ -281,10 +281,114 @@
                </div>
           </div>
 
-          <div class="left-10 absolute -top-12 lg:left-0 w-24 h-24 bg-gega-melon rounded-full text-center flex items-center">
-              <p class="font-gemunu lg:uppercase font-bold text-xl text-gega-red -rotate-45">OLDIE & GOLDIE</p>
+          <div class="left-10 absolute -top-12 lg:left-0 h-20 w-20 md:w-24 md:h-24 bg-gega-melon rounded-full text-center flex items-center">
+              <p class="font-gemunu uppercase font-bold text-xl text-gega-red -rotate-45">OLDIE & GOLDIE</p>
           </div>
      </div>
+   </section> 
+
+   <!-- Created post section -->
+
+   <section class="py-24 bg-black text-gega-grey">
+      <div class="container px-10 lg:px-0">
+          <h2 class="text-gega-red"><a href="#">Popular post</a></h2>
+          <div class="grid grid-cols-6 gap-10">
+               <div class="lg:col-span-3 md:col-span-3 col-span-6  border  border-gega-red">
+                   <div class="border-b border-gega-red p-4 flex items-center justify-between">
+                        <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+                        <img src="./images/userava1.jpg" class="rounded-full">
+                   </div>
+                   <p class="text-sm p-4">
+                       Lorem ipsum dolor Lorem ipsum dolor sit amet. Lorem, ipsum. Lorem, ipsum. sit amet consectetur adipisicing elit. Esse quaerat veritatis odio repudiandae optio? Nam accusantium repellat minima autem.
+                   </p>
+                   <div class="border-t border-gega-red p-4 flex items-center justify-end space-x-4 font-bold font-gemenu text-xs">
+                       <p>ON DEC 17,2023</p>
+                       <div class="flex items-center justify-center space-x-1">
+                           <i class="fa-regular fa-comment"></i>
+                           <p>12</p>
+                           <i class="fa-regular fa-heart"></i>
+                           <p>09</p>
+                       </div>
+                   </div>
+               </div>
+
+               <div class="lg:col-span-3 md:col-span-3 col-span-6 border  border-gega-red">
+                    <div class="border-b border-gega-red p-4 flex items-center justify-between">
+                         <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+                         <img src="./images/userava1.jpg" class="rounded-full">
+                    </div>
+                    <p class="text-sm p-4">
+                        Lorem ipsum dolor Lorem ipsum dolor sit amet. Lorem, ipsum. Lorem, ipsum. sit amet consectetur adipisicing elit. Esse quaerat veritatis odio repudiandae optio? Nam accusantium repellat minima autem.
+                    </p>
+                    <div class="border-t border-gega-red p-4 flex items-center justify-end space-x-4 font-bold font-gemenu text-xs">
+                        <p>ON DEC 17,2023</p>
+                        <div class="flex items-center justify-center space-x-1">
+                            <i class="fa-regular fa-comment"></i>
+                            <p>12</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>09</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-span-6 md:col-span-3  lg:col-span-2 border  border-gega-red">
+                    <div class="border-b border-gega-red p-4 flex items-center justify-between">
+                         <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+                         <img src="./images/userava1.jpg" class="rounded-full">
+                    </div>
+                    <p class="text-sm p-4">
+                        Lorem ipsum dolor Lorem ipsum dolor sit amet. Lorem, ipsum. Lorem, ipsum. sit amet consectetur adipisicing elit. Esse quaerat veritatis odio repudiandae optio? Nam accusantium repellat minima autem.
+                    </p>
+                    <div class="border-t border-gega-red p-4 flex items-center justify-end space-x-4 font-bold font-gemenu text-xs">
+                        <p>ON DEC 17,2023</p>
+                        <div class="flex items-center justify-center space-x-1">
+                            <i class="fa-regular fa-comment"></i>
+                            <p>12</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>09</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-span-6 md:col-span-3  lg:col-span-2 border  border-gega-red">
+                    <div class="border-b border-gega-red p-4 flex items-center justify-between">
+                         <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+                         <img src="./images/userava1.jpg" class="rounded-full">
+                    </div>
+                    <p class="text-sm p-4">
+                        Lorem ipsum dolor Lorem ipsum dolor sit amet. Lorem, ipsum. Lorem, ipsum. sit amet consectetur adipisicing elit. Esse quaerat veritatis odio repudiandae optio? Nam accusantium repellat minima autem.
+                    </p>
+                    <div class="border-t border-gega-red p-4 flex items-center justify-end space-x-4 font-bold font-gemenu text-xs">
+                        <p>ON DEC 17,2023</p>
+                        <div class="flex items-center justify-center space-x-1">
+                            <i class="fa-regular fa-comment"></i>
+                            <p>12</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>09</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hidden  lg:block lg:col-span-2 border  border-gega-red">
+                    <div class="border-b border-gega-red p-4 flex items-center justify-between">
+                         <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+                         <img src="./images/userava1.jpg" class="rounded-full">
+                    </div>
+                    <p class="text-sm p-4">
+                        Lorem ipsum dolor Lorem ipsum dolor sit amet. Lorem, ipsum. Lorem, ipsum. sit amet consectetur adipisicing elit. Esse quaerat veritatis odio repudiandae optio? Nam accusantium repellat minima autem.
+                    </p>
+                    <div class="border-t border-gega-red p-4 flex items-center justify-end space-x-4 font-bold font-gemenu text-xs">
+                        <p>ON DEC 17,2023</p>
+                        <div class="flex items-center justify-center space-x-1">
+                            <i class="fa-regular fa-comment"></i>
+                            <p>12</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>09</p>
+                        </div>
+                    </div>
+                </div>
+          </div>
+      </div>
    </section>
 </body>
 </html>
