--- a/public/index.html
+++ b/public/index.html
@@ -390,5 +390,31 @@
           </div>
       </div>
    </section>
+
+   <footer class="bg-black text-gega-grey">
+       <div class="container flex flex-col md:flex-row px-10 lg:space-x-2 lg:px-0 pb-8">
+           <div class="basis-1/3">
+               <a href="#" class="text-2xl lg:text-3xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-gega-red to-gega-grey">GEGA</a>
+               <p class="text-sm mt-2">2023 Adil Gadirov No &copy; COPYRIGHT</p>
+          </div>
+          <div class="basis-1/3">
+              <h2 class="mb-2 text-gega">LINKS</h2>
+              <div class="grid grid-cols-5 gap-2 uppercase">
+                  <a class="col-span-2 hover:text-gega-melon duration-500">Movies</a>
+                  <a class="col-span-2 hover:text-gega-melon duration-500">Celebrites</a>
+                  <a class="col-span-2 hover:text-gega-melon duration-500">Blog</a>
+                  <a class="col-span-2 hover:text-gega-melon duration-500">News</a>
+                  <a class="col-span-2 hover:text-gega-melon duration-500">About</a>
+              </div>
+          </div>
+          <div class="basis-1/3">
+              <h2 class="mb-2 text-gega-red">FOLLOW US</h2>
+              <form action="#" class="flex">
+                 <input type="text" class="py-1 px-1 bg-transparent border border-gega-red placeholder:text-xs outline-none" placeholder="type your email">
+                 <button class="py-1 px-1  border border-gega-red bg-gega-red font-gemunu uppercase">Subscribe</button>
+              </form>
+          </div>
+       </div>
+   </footer>
 </body>
 </html>
